@@ -8,7 +8,7 @@
  * Copyright (c) 1999-2007 Ethan Galstad (http://www.nagios.org)
  *
  * First Written:   01-28-1999 (start of development)
- * Last Modified:   01-19-2007
+ * Last Modified:   03-01-2007
  *
  * Description:
  *
@@ -142,6 +142,9 @@ int             log_rotation_method=LOG_ROTATION_NONE;
 
 int             sigshutdown=FALSE;
 int             sigrestart=FALSE;
+static char     *sigs[]={"EXIT","HUP","INT","QUIT","ILL","TRAP","ABRT","BUS","FPE","KILL","USR1","SEGV","USR2","PIPE","ALRM","TERM","STKFLT","CHLD","CONT","STOP","TSTP","TTIN","TTOU","URG","XCPU","XFSZ","VTALRM","PROF","WINCH","IO","PWR","UNUSED","ZERR","DEBUG",(char *)NULL};
+int             caught_signal=FALSE;
+int             sig_id=0;
 
 int             restarting=FALSE;
 
@@ -223,7 +226,7 @@ int main(int argc, char **argv){
 	char buffer[MAX_INPUT_BUFFER];
 	int display_license=FALSE;
 	int display_help=FALSE;
-	int c;
+	int c=0,x=0;
 
 #ifdef HAVE_GETOPT_H
 	int option_index=0;
@@ -710,6 +713,29 @@ int main(int argc, char **argv){
 		        /***** start monitoring all services *****/
 			/* (doesn't return until a restart or shutdown signal is encountered) */
 			event_execution_loop();
+
+			/* 03/01/2007 EG Moved from sighandler() to prevent FUTEX locking problems under NPTL */
+			/* did we catch a signal? */
+			if(caught_signal==TRUE){
+
+				if(sig_id<0)
+					sig_id=-sig_id;
+
+				for(x=0;sigs[x]!=(char *)NULL;x++);
+				sig_id%=x;
+
+				if(sig_id==SIGHUP)
+					snprintf(buffer,sizeof(buffer),"Caught SIGHUP, restarting...\n");
+				else
+					snprintf(buffer,sizeof(buffer),"Caught SIG%s, shutting down...\n",sigs[sig_id]);
+				buffer[sizeof(buffer)-1]='\x0';
+
+#ifdef DEBUG2
+				printf("%s\n",buffer);
+#endif
+
+				write_to_all_logs(buffer,NSLOG_PROCESS_INFO);
+				}
 
 #ifdef USE_EVENT_BROKER
 			/* send program data to broker */
