@@ -2,8 +2,8 @@
  *
  * UTILS.C - Miscellaneous utility functions for Nagios
  *
- * Copyright (c) 1999-2006 Ethan Galstad (nagios@nagios.org)
- * Last Modified:   12-26-2006
+ * Copyright (c) 1999-2007 Ethan Galstad (nagios@nagios.org)
+ * Last Modified:   03-01-2007
  *
  * License:
  *
@@ -76,6 +76,8 @@ extern int      use_true_regexp_matching;
 
 extern int      sigshutdown;
 extern int      sigrestart;
+extern int      caught_signal;
+extern int      sig_id;
 
 extern int      daemon_mode;
 extern int      daemon_dumps_core;
@@ -3375,55 +3377,26 @@ void reset_sighandler(void){
 
 /* handle signals */
 void sighandler(int sig){
-	static char *sigs[]={"EXIT","HUP","INT","QUIT","ILL","TRAP","ABRT","BUS","FPE","KILL","USR1","SEGV","USR2","PIPE","ALRM","TERM","STKFLT","CHLD","CONT","STOP","TSTP","TTIN","TTOU","URG","XCPU","XFSZ","VTALRM","PROF","WINCH","IO","PWR","UNUSED","ZERR","DEBUG",(char *)NULL};
-	int i;
-	char temp_buffer[MAX_INPUT_BUFFER];
-
 
 	/* if shutdown is already true, we're in a signal trap loop! */
-	if(sigshutdown==TRUE)
+	/* changed 09/07/06 to only exit on segfaults */
+	if(sigshutdown==TRUE && sig==SIGSEGV)
 		exit(ERROR);
+
+	caught_signal=TRUE;
 
 	if(sig<0)
 		sig=-sig;
 
-	for(i=0;sigs[i]!=(char *)NULL;i++);
-
-	sig%=i;
+	sig_id=sig;
 
 	/* we received a SIGHUP, so restart... */
-	if(sig==SIGHUP){
-
+	if(sig==SIGHUP)
 		sigrestart=TRUE;
 
-		sprintf(temp_buffer,"Caught SIGHUP, restarting...\n");
-		write_to_all_logs(temp_buffer,NSLOG_PROCESS_INFO);
-#ifdef DEBUG2
-		printf("%s\n",temp_buffer);
-#endif
-	        }
-
 	/* else begin shutting down... */
-	else if(sig<16){
-
+	else if(sig<16)
 		sigshutdown=TRUE;
-
-		sprintf(temp_buffer,"Caught SIG%s, shutting down...\n",sigs[sig]);
-		write_to_all_logs(temp_buffer,NSLOG_PROCESS_INFO);
-
-#ifdef DEBUG2
-		printf("%s\n",temp_buffer);
-#endif
-
-#ifdef REMOVED_06202006
-		/* remove the lock file if we're in daemon mode */
-		if(daemon_mode==TRUE)
-			unlink(lock_file);
-
-		/* close and delete the external command file FIFO */
-		close_command_file();
-#endif
-	        }
 
 	return;
         }
